[package]
name = "survon-runtime-council-seat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
color-eyre = "0.6"
anyhow = "1"
once_cell = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"

[[bin]]
name = "survon-runtime-council-seat"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
